# SFML_tutorial_work

./: .gitignore
window/: CMakeLists.txt  main.cpp
